# mnist-digit-rec-cpp

./: .gitignore  README.md  cli_main.cpp  data_loader.cpp  data_loader.hpp  gui_main.cpp  main.cpp  main_window.qml  matrix.cpp  matrix.hpp  matrix_avx.cpp  matrix_avx_tests.cpp  matrix_multiply_avx.cpp  matrix_multiply_avx.hpp  matrix_multiply_avx_tests.cpp  meson.build  network.cpp  network.hpp  tests.cpp  tests_main.cpp  view_bitmap.py
source/: cli_main.cpp  data_loader.cpp  data_loader.hpp  gui_main.cpp  matrix.cpp  matrix.hpp  matrix_avx.cpp  matrix_avx.hpp  matrix_view.hpp  network.cpp  network.hpp  view_bitmap.py
test/: matrix_avx_tests.cpp  tests.cpp
